--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,8 +18,32 @@ jobs:
       with:
         python-version: '3.10'
         
-    - name: Install Buildozer
-      run: pip install buildozer
+    - name: Install Buildozer and Dependencies
+      run: |
+        pip install buildozer
+        pip install cython
+        pip install virtualenv
+      
+    - name: Install Android SDK
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          git \
+          zip \
+          unzip \
+          openjdk-17-jdk \
+          python3-pip \
+          autoconf \
+          libtool \
+          pkg-config \
+          zlib1g-dev \
+          libncurses5-dev \
+          libncursesw5-dev \
+          libtinfo5 \
+          cmake \
+          libffi-dev \
+          libssl-dev \
+          python3-setuptools
       
     - name: Create buildozer.spec
       run: |
@@ -34,12 +58,17 @@ jobs:
         orientation = portrait
         android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE
         android.api = 33
-        android.minapi = 21' > buildozer.spec
+        android.minapi = 21
+        android.sdk = 33
+        android.ndk = 25b' > buildozer.spec
         
     - name: Build APK
-      run: buildozer android debug
+      run: |
+        export PATH=$PATH:/home/runner/.local/bin
+        buildozer android debug 2>&1 | tail -100
       
     - name: Upload APK
+      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: orifis-apk
