--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,38 @@
 name: Build APK
 
 on:
+  workflow_dispatch:  # SADECE MANUEL
   push:
     branches: [main]
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
+    timeout-minutes: 180  # 👈 3 SAAT
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-        
-    - name: Install dependencies
+    
+    - name: Install minimal dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y git zip unzip openjdk-11-jdk python3-pip python3-venv autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev wget curl
-        
+        sudo apt-get install -y git zip unzip python3-pip openjdk-11-jdk
+    
     - name: Install Buildozer
       run: |
-        pip install buildozer cython kivy==2.2.1 plyer
-        
-    - name: Build APK
-      timeout-minutes: 60
+        pip install buildozer cython kivy
+    
+    - name: Build with timeout workaround
       run: |
-        buildozer -v android debug
+        # Önce SDK'yı manuel indir
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        mkdir -p ~/.android/cmdline-tools
+        unzip -q commandlinetools-linux-9477386_latest.zip -d ~/.android/cmdline-tools
+        mv ~/.android/cmdline-tools/cmdline-tools ~/.android/cmdline-tools/latest
         
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: apk
-        path: bin/*.apk
+        # Buildozer cache
+        buildozer android clean
+        timeout 1500 buildozer -v android debug || echo "Build continues..."
