--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 180  # 👈 3 SAAT
+    timeout-minutes: 180
     
     steps:
     - uses: actions/checkout@v4
@@ -16,7 +16,7 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Install ONLY essential dependencies
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y git zip unzip python3-pip openjdk-11-jdk wget
@@ -26,46 +26,41 @@ jobs:
         pip install --upgrade pip
         pip install buildozer cython==0.29.36 kivy==2.2.1
     
-    - name: Create optimized buildozer.spec
+    - name: Create FIXED buildozer.spec
       run: |
         echo '[app]' > buildozer.spec
         echo 'title = Orifis' >> buildozer.spec
         echo 'package.name = orifisapp' >> buildozer.spec
         echo 'package.domain = org.lutfi' >> buildozer.spec
         echo 'source.dir = .' >> buildozer.spec
-        echo 'source.include_exts = py,json' >> buildozer.spec  # 👈 SADECE PY VE JSON
+        echo 'source.include_exts = py,json' >> buildozer.spec
         echo 'version = 1.0' >> buildozer.spec
         echo 'requirements = python3,kivy==2.2.1' >> buildozer.spec
         echo 'orientation = portrait' >> buildozer.spec
         echo 'android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE' >> buildozer.spec
-        echo 'android.api = 30' >> buildozer.spec
+        echo 'android.api = 33' >> buildozer.spec  # 👈 GÜNCEL API
         echo 'android.minapi = 21' >> buildozer.spec
-        echo 'android.sdk = 30' >> buildozer.spec
-        echo 'android.ndk = 23b' >> buildozer.spec  # 👈 ESKİ NDK
-        echo 'android.archs = armeabi-v7a' >> buildozer.spec  # 👈 TEK ARCH
+        echo 'android.sdk = 33' >> buildozer.spec  # 👈 GÜNCEL SDK
+        echo 'android.ndk = 25b' >> buildozer.spec  # 👈 NDK 25b YAP!
+        echo 'android.archs = armeabi-v7a' >> buildozer.spec
         echo 'android.accept_sdk_license = True' >> buildozer.spec
         echo 'log_level = 2' >> buildozer.spec
     
-    - name: Pre-download Android SDK
+    - name: Clean buildozer cache
       run: |
-        # SDK'yı önceden indir
-        mkdir -p ~/.android
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdline-tools.zip
-        mkdir -p ~/.android/cmdline-tools
-        unzip -q cmdline-tools.zip -d ~/.android/cmdline-tools
-        mv ~/.android/cmdline-tools/cmdline-tools ~/.android/cmdline-tools/latest
-        echo "export ANDROID_HOME=\$HOME/.android" >> $GITHUB_ENV
-    
-    - name: Build APK with retry
-      run: |
-        # Cache temizle
         rm -rf .buildozer
-        
-        # Build'i başlat (timeout 150 dakika)
-        timeout 1500 buildozer -v android debug || echo "Build continues..."
-        
-        # Eğer ilk seferde olmazsa, tekrar dene
-        if [ ! -f "bin/*.apk" ]; then
-          echo "First build failed, retrying..."
-          buildozer -v android debug
-        fi
+        rm -rf ~/.buildozer
+    
+    - name: Download NDK 25b manually
+      run: |
+        # NDK 25b'i manuel indir
+        wget -q https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
+        mkdir -p ~/.buildozer/android/platform
+        unzip -q android-ndk-r25b-linux.zip -d ~/.buildozer/android/platform/
+        mv ~/.buildozer/android/platform/android-ndk-r25b ~/.buildozer/android/platform/android-ndk-r25b
+        echo "NDK 25b downloaded"
+    
+    - name: Build APK
+      run: |
+        # Build et
+        buildozer -v android debug
