--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,44 @@
 name: Build APK
-
-on:
-  workflow_dispatch:
-
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-22.04
     timeout-minutes: 180
-    
     steps:
     - uses: actions/checkout@v4
-    
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    
     - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y git zip unzip python3-pip openjdk-17-jdk wget
-    
     - name: Install Buildozer
       run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.36 kivy==2.1.0  # 👈 2.2.1 YERİNE 2.1.0
-    
+        pip install buildozer cython kivy==2.1.0
     - name: Create buildozer.spec
       run: |
-        cat > buildozer.spec << 'EOF'
-[app]
-title = Orifis
-package.name = orifisapp
-package.domain = org.lutfi
-source.dir = .
-source.include_exts = py,json
-version = 1.0
-requirements = python3,kivy==2.1.0
-orientation = portrait
-android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE
-android.api = 30
-android.minapi = 21
-android.sdk = 30
-android.ndk = 23b
-android.archs = armeabi-v7a
-android.accept_sdk_license = True
-log_level = 2
-EOF
-    
+        echo '[app]' > buildozer.spec
+        echo 'title = Orifis' >> buildozer.spec
+        echo 'package.name = orifisapp' >> buildozer.spec
+        echo 'package.domain = org.lutfi' >> buildozer.spec
+        echo 'source.dir = .' >> buildozer.spec
+        echo 'source.include_exts = py,json' >> buildozer.spec
+        echo 'version = 1.0' >> buildozer.spec
+        echo 'requirements = python3,kivy==2.1.0' >> buildozer.spec
+        echo 'orientation = portrait' >> buildozer.spec
+        echo 'android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE' >> buildozer.spec
+        echo 'android.api = 30' >> buildozer.spec
+        echo 'android.minapi = 21' >> buildozer.spec
+        echo 'android.sdk = 30' >> buildozer.spec
+        echo 'android.ndk = 23b' >> buildozer.spec
+        echo 'android.archs = armeabi-v7a' >> buildozer.spec
+        echo 'android.accept_sdk_license = True' >> buildozer.spec
+        echo 'log_level = 2' >> buildozer.spec
     - name: Clean cache
       run: |
         rm -rf .buildozer ~/.buildozer 2>/dev/null || true
-    
     - name: Build APK
       run: |
         buildozer -v android debug
