--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,44 +1,78 @@
 name: Build APK
-on: workflow_dispatch
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 180
+    timeout-minutes: 240  # 4 SAAT
+    
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
+    
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y git zip unzip python3-pip openjdk-17-jdk wget
+        sudo apt-get install -y git zip unzip python3-pip openjdk-17-jdk wget curl
+    
     - name: Install Buildozer
       run: |
-        pip install buildozer cython kivy==2.1.0
+        pip install --upgrade pip
+        pip install buildozer cython==0.29.36 kivy==2.2.1
+    
+    - name: Download NDK 25b with cache
+      id: cache-ndk
+      run: |
+        # NDK 25b indir
+        wget -q https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
+        unzip -q android-ndk-r25b-linux.zip
+        # Buildozer cache dizinine taşı
+        mkdir -p ~/.buildozer/android/platform
+        mv android-ndk-r25b ~/.buildozer/android/platform/
+        echo "NDK_PATH=~/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
+    
     - name: Create buildozer.spec
       run: |
         echo '[app]' > buildozer.spec
-        echo 'title = Orifis' >> buildozer.spec
+        echo 'title = Orifis App' >> buildozer.spec
         echo 'package.name = orifisapp' >> buildozer.spec
         echo 'package.domain = org.lutfi' >> buildozer.spec
         echo 'source.dir = .' >> buildozer.spec
-        echo 'source.include_exts = py,json' >> buildozer.spec
+        echo 'source.include_exts = py,json,txt' >> buildozer.spec
         echo 'version = 1.0' >> buildozer.spec
-        echo 'requirements = python3,kivy==2.1.0' >> buildozer.spec
+        echo 'requirements = python3,kivy==2.2.1' >> buildozer.spec
         echo 'orientation = portrait' >> buildozer.spec
         echo 'android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,READ_EXTERNAL_STORAGE' >> buildozer.spec
-        echo 'android.api = 30' >> buildozer.spec
+        echo 'android.api = 33' >> buildozer.spec
         echo 'android.minapi = 21' >> buildozer.spec
-        echo 'android.sdk = 30' >> buildozer.spec
-        echo 'android.ndk = 23b' >> buildozer.spec
+        echo 'android.sdk = 33' >> buildozer.spec
+        echo 'android.ndk = 25b' >> buildozer.spec
         echo 'android.archs = armeabi-v7a' >> buildozer.spec
         echo 'android.accept_sdk_license = True' >> buildozer.spec
         echo 'log_level = 2' >> buildozer.spec
-    - name: Clean cache
-      run: |
-        rm -rf .buildozer ~/.buildozer 2>/dev/null || true
+    
     - name: Build APK
       run: |
-        buildozer -v android debug
+        # Cache temizle
+        rm -rf .buildozer 2>/dev/null || true
+        
+        # Build et
+        buildozer -v android debug 2>&1 | tail -100
+        
+        # APK kontrol et
+        ls -la bin/ 2>/dev/null || echo "Build directory not found"
+    
+    - name: Upload APK
+      if: success()
+      uses: actions/upload-artifact@v4
+      with:
+        name: orifis-apk
+        path: bin/*.apk
+        if-no-files-found: error
